# tacult

./: .gitignore  README.md  eval_train.py  export_model.py  log.txt  main.py  pyproject.toml  requirements.txt  runner.py  test.py  train.py
saved_models/: utac-v0__opp_model_1__1__1736704754.pth  utac-v0__opp_model__1__1736703748.pth  utac-v0__trainer__1__1736677780.pth
src/: .gitignore  __init__.py  agent.py  evaluate.py  mcts.py  mctsnn.py  negamax.py  network.py  trainer.py  utac_game.py  utac_nn.py  utils.py
src/base/: arena.py  coach.py  mcts.py  nn_wrapper.py  utils.py
src/tacult/: __init__.py  export_model.py  generator.py  network.py  pit.py  tester.py  trainer.py  utac_game.py  utac_nn.py  utils.py
src/tacult/base/: __init__.py  arena.py  coach.py  mcts.py  nn_wrapper.py  utils.py
src/utacenv/: __init__.py
src/utacenv/envs/: __init__.py  utacenv.py
