[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tacult"
version = "1.0.0"
authors = [
    { name = "Lunathanel", email = "info@lunathanel.dev" },
]
description = "Ultimate Tic Tac Toe AI, make sure to preinstall utac-gym"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "onnx",
    "onnxruntime",
    "tqdm",
    "coloredlogs"
]

[tool.hatch.build.targets.wheel]
packages = ["src/tacult"]
